@@ -792,3 +792,14 @@ CREATE TABLE mappings (
   PRIMARY KEY (mappingid),
   KEY valuemapid (valuemapid)
 ) type=InnoDB;
+
+--
+-- Table structure for table 'housekeeper'
+--
+
+CREATE TABLE housekeeper (
+  housekeeperid		int(4)		NOT NULL auto_increment,
+  tablename		varchar(64)	DEFAULT '' NOT NULL,
+  field			varchar(64)	DEFAULT '' NOT NULL,
+  PRIMARY KEY (housekeeperid)
+) type=InnoDB;
